--- a/serverless/doc-reader/template.yaml
+++ b/serverless/doc-reader/template.yaml
@@ -67,6 +67,10 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
+                  - s3:ListBucket
+                Resource: !Sub "arn:aws:s3:::${InputBucket}"
+              - Effect: Allow
+                Action:
                   - s3:GetObject
                 Resource: !Sub "arn:aws:s3:::${InputBucket}/*"
               - Effect: Allow
