--- a/serverless/doc-reader/src/compose.yaml
+++ b/serverless/doc-reader/src/compose.yaml
@@ -7,7 +7,7 @@ services:
       - ./inputs:/inputs
       - ./outputs:/outputs
     environment:
-      - INPUT_FILE_PATH=/inputs
-      - OUTPUT_DIR_PATH=/outputs
+      - INPUT_S3_BUCKET=local-test-bucket
+      - OUTPUT_S3_URI_PREFIX=s3://local-test-output
     stdin_open: true  # equivalent to -i
     tty: true        # equivalent to -t
