--- a/serverless/doc-reader/template.yaml
+++ b/serverless/doc-reader/template.yaml
@@ -43,7 +43,7 @@ Resources:
                   - s3:PutObject
                 Resource: !Sub
                   - "arn:aws:s3:::${OutputBucket}/*"
-                  - OutputBucket: !ImportValue finance-doc-core-infra-input-bucket
+                  - OutputBucket: !ImportValue finance-doc-core-infra-output-bucket
 
   EcrRepository:
     Type: AWS::ECR::Repository
@@ -100,6 +100,73 @@ Resources:
           # The entrypoint.sh script expects INPUT_S3_URI and OUTPUT_S3_URI_PREFIX
           Environment: []
 
+  DocReaderEventBus:
+    Type: AWS::Events::EventBus
+    Properties:
+      Name: doc-reader
+      Description: "Custom event bus for doc-reader service events"
+      Tags:
+        - Key: Service
+          Value: doc-reader
+        - Key: Purpose
+          Value: event-driven-processing
+  
+  DocReaderEventBridgeRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: DocReaderEventBridgeRole
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: events.amazonaws.com
+            Action: sts:AssumeRole
+      Policies:
+        - PolicyName: StepFunctionsInvokePolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - states:StartExecution
+                Resource: !Sub "arn:aws:states:${AWS::Region}:${AWS::AccountId}:stateMachine:*"
+
+  DocReaderStartProcessorRule:
+    Type: AWS::Events::Rule
+    Properties:
+      Name: doc-reader-processor-start
+      Description: "Triggers LLM processor when doc-reader uploads markdown files to S3"
+      EventPattern:
+        source:
+          - "aws.s3"
+        detail-type:
+          - "Object Created"
+        detail:
+          bucket:
+            name: 
+              - !ImportValue finance-doc-core-infra-output-bucket
+          object:
+            key:
+              - prefix: "doc-reader-outputs/"
+              - suffix: ".md"
+      State: ENABLED
+      Targets:
+        - Arn: !Ref LlmProcessorStateMachine
+          Id: LlmProcessorTarget
+          RoleArn: !GetAtt EventBridgeStepFunctionsRole.Arn
+          InputTransformer:
+            InputPathsMap:
+              bucket: $.detail.bucket.name
+              key: $.detail.object.key
+            InputTemplate: |
+              {
+                "input_bucket": "<bucket>",
+                "input_key": "<key>",
+                "output_bucket": "<bucket>",
+                "output_key": "llm-processed/<key>-processed.json"
+              }
+
 Outputs:
   EcrRepositoryUri:
     Description: "The URI of the ECR repository for the doc-reader image"
@@ -107,3 +174,13 @@ Outputs:
   TaskDefinitionArn:
     Description: "The ARN of the ECS Task Definition"
     Value: !Ref TaskDefinition
+  DocReaderEventBusName:
+    Description: "The name of the custom event bus for doc-reader events"
+    Value: !Ref DocReaderEventBus
+    Export:
+      Name: !Sub "${ProjectName}-event-bus-name"
+  DocReaderEventBusArn:
+    Description: "The ARN of the custom event bus for doc-reader events"
+    Value: !GetAtt DocReaderEventBus.Arn
+    Export:
+      Name: !Sub "${ProjectName}-event-bus-arn"
