--- a/core-infra/samconfig.toml
+++ b/core-infra/samconfig.toml
@@ -4,6 +4,6 @@ stack_name = "finance-doc-reader-core-infra"
 resolve_s3 = true
 s3_prefix = "finance-doc-reader-core-infra"
 region = "us-west-2"
-capabilities = "CAPABILITY_IAM"
+capabilities = ["CAPABILITY_IAM", "CAPABILITY_NAMED_IAM"]
 parameter_overrides = "ProjectName=\"finance-doc-core-infra\""
 image_repositories = []
