--- a/core-infra/template.yaml
+++ b/core-infra/template.yaml
@@ -6,7 +6,23 @@ Description: >
 Parameters:
   ProjectName:
     Type: String
-    Default: finance-doc-core-infra 
+    Default: finance-doc-core-infra
+  DatabaseName:
+    Type: String
+    Default: finance_docs
+    Description: Name of the PostgreSQL database
+  MinCapacity:
+    Type: Number
+    Default: 0.5
+    Description: Minimum Aurora Serverless v2 capacity units
+    MinValue: 0.5
+    MaxValue: 128
+  MaxCapacity:
+    Type: Number
+    Default: 2.0
+    Description: Maximum Aurora Serverless v2 capacity units
+    MinValue: 0.5
+    MaxValue: 128 
 
 Resources:
   InputBucket:
@@ -40,6 +56,40 @@ Resources:
       Name: doc-reader
       Description: "Custom event bus for doc-reader service events"
 
+  # Aurora Serverless v2 PostgreSQL Cluster
+  AuroraCluster:
+    Type: AWS::RDS::DBCluster
+    Properties:
+      DBClusterIdentifier: !Sub "${ProjectName}-postgres-cluster"
+      Engine: aurora-postgresql
+      EngineVersion: 16.6
+      DatabaseName: !Ref DatabaseName
+      MasterUsername: finance_docs
+      ManageMasterUserPassword: true
+      EnableHttpEndpoint: true
+      ServerlessV2ScalingConfiguration:
+        MinCapacity: 0.5
+        MaxCapacity: 16
+      BackupRetentionPeriod: 1
+      DeletionProtection: false
+      PreferredBackupWindow: "03:00-04:00"
+      PreferredMaintenanceWindow: "sun:04:00-sun:05:00"
+      Tags:
+        - Key: Name
+          Value: !Sub "${ProjectName}-postgres-cluster"
+
+  # Aurora Serverless v2 Database Instance
+  AuroraInstance:
+    Type: AWS::RDS::DBInstance
+    Properties:
+      DBInstanceIdentifier: !Sub "${ProjectName}-postgres-instance"
+      DBClusterIdentifier: !Ref AuroraCluster
+      DBInstanceClass: db.serverless
+      Engine: aurora-postgresql
+      Tags:
+        - Key: Name
+          Value: !Sub "${ProjectName}-postgres-instance"
+
 Outputs:
   EcsClusterName:
     Description: "The name of the ECS Cluster"
@@ -61,3 +111,27 @@ Outputs:
     Value: !Ref DocReaderEventBus
     Export:
       Name: !Sub '${ProjectName}-doc-reader-event-bus-name'
+  
+  AuroraClusterArn:
+    Description: "ARN of the Aurora PostgreSQL cluster for Data API access"
+    Value: !Sub "arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${AuroraCluster}"
+    Export:
+      Name: !Sub '${ProjectName}-aurora-cluster-arn'
+      
+  AuroraClusterEndpoint:
+    Description: "Aurora cluster endpoint"
+    Value: !GetAtt AuroraCluster.Endpoint.Address
+    Export:
+      Name: !Sub '${ProjectName}-aurora-cluster-endpoint'
+      
+  DatabaseSecretArn:
+    Description: "ARN of the database master user secret"
+    Value: !GetAtt AuroraCluster.MasterUserSecret.SecretArn
+    Export:
+      Name: !Sub '${ProjectName}-database-secret-arn'
+      
+  DatabaseName:
+    Description: "Name of the PostgreSQL database"
+    Value: !Ref DatabaseName
+    Export:
+      Name: !Sub '${ProjectName}-database-name'
