added event to trigger ECS task after document upload wip

--- a/core-infra/template.yaml
+++ b/core-infra/template.yaml
@@ -34,6 +34,9 @@ Resources:
         BlockPublicPolicy: true
         IgnorePublicAcls: true
         RestrictPublicBuckets: true
+      NotificationConfiguration:
+        EventBridgeConfiguration:
+          EventBridgeEnabled: true
 
   OutputBucket:
     Type: AWS::S3::Bucket
